# Mentorus

./: CMakeLists.txt  main.cpp  resources.qrc
.github/workflows/: ci.yml
qml/: Main.qml
qml/components/: LineEdit.qml  ListCard.qml  MessageBubble.qml  QuickActionsCard.qml  SidebarButton.qml  StatCard.qml  TopBar.qml  UiButton.qml
qml/pages/: AiChat.qml  Dashboard.qml  MainPage.qml
qml/theme/: ColorPalette.qml
